version/0.12/_sources/api/solver/_autosummary/settings/linearization.rst.txt
:orphan:

.. _linearization:

linearization
=============

.. currentmodule:: ansys.fluent.core.solver.settings_231.linearization

.. autoclass:: linearization
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

====================================================================================   =================================================================================================

Child                                                                                                                                                                            Summary

====================================================================================   =================================================================================================
:ref:`keep_linearized_source_terms_constant <keep_linearized_source_terms_constant>`              Enable/disable keeping linearized DPM source terms constant until the next DPM Update.

:ref:`linearize_source_terms <linearize_source_terms>`                                                                                 Enable/disable linearization of DPM source terms.

:ref:`linearized_source_terms_limiter <linearized_source_terms_limiter>`                   Relative limit for DPM source linear coefficient with respect to fluid linear Ap coefficient.

====================================================================================   =================================================================================================

.. rubric:: Included in:

==================================   =========================

Parent                                                 Summary

==================================   =========================
:ref:`source_terms <source_terms>`       'source_terms' child.

==================================   =========================

