version/0.17/_sources/api/solver/_autosummary/settings/linearization.rst.txt
:orphan:

.. _linearization:

linearization
=============

.. autoclass:: ansys.fluent.core.solver.settings_232.linearization.linearization
    :show-inheritance:

.. rubric:: Attributes

====================================================================================   =================================================================================================

Attribute                                                                                                                                                                        Summary

====================================================================================   =================================================================================================
:ref:`keep_linearized_source_terms_constant <keep_linearized_source_terms_constant>`              Enable/disable keeping linearized DPM source terms constant until the next DPM Update.

:ref:`source_term_linearization_enabled <source_term_linearization_enabled>`                                                           Enable/disable linearization of DPM source terms.

:ref:`enhanced_linearization_enabled <enhanced_linearization_enabled>`                                                           Enable/disable enhanced DPM source terms linearization.

:ref:`linearized_source_terms_limiter <linearized_source_terms_limiter>`                   Relative limit for DPM source linear coefficient with respect to fluid linear Ap coefficient.

====================================================================================   =================================================================================================

.. rubric:: Included in:

==================================   =========================

Parent                                                 Summary

==================================   =========================
:ref:`source_terms <source_terms>`       'source_terms' child.

==================================   =========================

